[gd_scene load_steps=2 format=3 uid="uid://b7c8d9e0f1a2"]

[ext_resource type="Script" path="res://src/scripts/Menu.gd" id="1_menu"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.4, 0.8, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -400.0
offset_right = 200.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "STACK JUMPER"
horizontal_alignment = 1

[node name="PlayButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(300, 80)
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="SoundToggle" type="CheckBox" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Sound"

[node name="VibrationToggle" type="CheckBox" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Vibration"

[node name="ResetButton" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Reset Best Score"

[node name="CreditsLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Stack Jumper v1.0.0
Built with Godot 4.3"
horizontal_alignment = 1

